--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </header>
 
   <main>
-
+     <div class="loader"></div>
     <form class="form">
   <label>
     <input  type="text" name="search-text" placeholder="Search images..." required>
