--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
   </header>
 
   <main>
-    <div class="loader"></div>
     <form class="form">
       <label>
         <input type="text" name="search-text" placeholder="Search images..." required>
       </label>
       <button type="submit">Search</button>
     </form>
+     <div class="loader is-hidden"></div>
     <ul class="gallery"></ul>
 
   </main>
